# Olio-ohjelmointi-ja-oliopohjainen-suunnittelu-IN00CS88-3016-TVT25SPL

./: .gitignore  README.md
VIikko 2/olio-ohjelmointi_kotitehtava2/: CMakeLists.txt  homework_week_2.cpp  main.cpp
Viikko 4/Viikkoharjoitus_4_pankkitili/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
Viikko1/Viikkotehtava_1_arvauspeli/: CMakeLists.txt  main.cpp
Viikko1/Vikkotehtavat_arvauspeli_3/: CMakeLists.txt  main.cpp
Viikko1/viikkotehtava_1_arvauspeli_2/: CMakeLists.txt  main.cpp
Viikko2/olio-ohjelmointi_kotitehtava2/: homework_week_2.h
Viikko3/Viikko3_luento/: CMakeLists.txt  main.cpp  perintaharjoitus.cpp  perintaharjoitus.h  son.cpp  son.h
Viikko3/Viikkotehtava_3/: chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Viikko5/Notifikaattori/: main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
Viikkotehtava_6/: CMakeLists.txt  main.cpp  student.cpp  student.h
Week_7/Calculator_widget/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui
Week_7/IncrementHandler/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
